<resources>
    <string name="app_name">ChaYu</string>
    <string name="home_page">首页</string>
    <string name="cha_ping">茶评</string>
    <string name="shi_ji">市集</string>
    <string name="quan_zi">圈子</string>
    <string name="wen_zhang">文章</string>
    <string name="homepage_chaping">茶评</string>
    <string name="homepage_shiji">市集</string>
    <string name="homepage_more">更多</string>
    <string name="homepage_quanzi">圈子</string>
    <string name="homepage_wenzhang">文章</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chayupingfen">茶语评分:</string>
    <string name="zonghepingfen">综合评分:</string>
    <string name="huati">话题</string>
    <string name="qiandao">签到</string>
</resources>
